fix: update wukong api token refresh (#702)
* fix: update wukong api token refresh

* update swagger
